<resources>
    <string name="app_name">Informasi Akademik</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="logo">logo</string>
    <string name="share">Profil</string>
    <string name="profile_name">NAMA</string>
    <string name="profile_nim">NIM</string>
    <string name="profile_prodi">PRODI</string>
    <string name="profile_faculty">FAKULTAS</string>
    <string name="btn_title">Judul Tombol</string>
    <string name="btn_subtitle">Lihat Detail</string>
    <string name="btn_keketatan">KEKETATAN</string>
    <string name="btn_nilai_akademik">NILAI AKADEMIK</string>
    <string name="btn_mahasiswa_aktif">MAHASISWA AKTIF</string>
    <string name="btn_mahasiswa_kurang_mampu">MAHASISWA KURANG MAMPU</string>
    <string name="btn_analisis_pembayaran">ANALISIS PEMBAYARAN</string>
    <string name="analisis_pembayaran_title">ANALISIS PEMBAYARAN MAHASISWA</string>
    <string name="nilai_akademik_title">PERSENTASE NILAI AKADEMIK</string>
    <string name="data_pembayaran">DATA REKAPITULASI PEMBAYARAN MAHASISWA</string>
    <string name="jumlah_pembayaran">JUMLAH PEMBAYARAN MAHASISWA</string>
    <string name="data_semester">GRAFIK RATA-RATA IPK 10 SEMESTER TERAKHIR</string>
    <string name="data_ipk">PERSENTASE JUMLAH IPK 10 SEMESTER TERAKHIR</string>
    <string name="btn_ace">AEE</string>
    <string name="no">NO.</string>
    <string name="program_studi">PROGRAM STUDI</string>
    <string name="akp">AKP</string>
    <string name="_1">1</string>
    <string name="farmasi">Farmasi</string>
    <string name="_1_68">1:68</string>
    <string name="_1_46">\n</string>
    <string name="_1_46_">1:46</string>
    <string name="informatika">Informatika</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="kebidanan">Kebidanan</string>
    <string name="_1_32">1:32</string>
    <string name="psikologi">Psikologi</string>
    <string name="_1_31">1:31</string>
    <string name="sains_data">Sains Data</string>
    <string name="kedokteran">Kedokteran</string>
    <string name="_1_29">1:29</string>
    <string name="teknik_industri">Teknik Industri</string>
    <string name="_1_26">1:26</string>
    <string name="ilmu_dan_teknologi_pangan">Ilmu dan Teknologi Pangan</string>
    <string name="_1_24">1:24</string>
    <string name="teknik_elektro">Teknik Elektro</string>
    <string name="_1_22">1:22</string>
    <string name="teknik_sipil">Teknik Sipil</string>
    <string name="_1_21">1:21</string>
    <string name="soshum">SOSHUM</string>
    <string name="top_10_prodi_dengan_keketatan_tertinggi">TOP 10 PRODI DENGAN KEKETATAN TERTINGGI</string>
    <string name="saintek">SAINTEK</string>
    <string name="manajemen">Manajemen</string>
    <string name="_1_49">1:49</string>
    <string name="bisnis_digital">Bisnis Digital</string>
    <string name="_1_44">1:44</string>
    <string name="ilmu_komusikasi">Ilmu Komusikasi</string>
    <string name="_1_42">1:42</string>
    <string name="akutansi">Akutansi</string>
    <string name="pgsd">PGSD</string>
    <string name="_1_28">1:28</string>
    <string name="bimbingan_dan_konseling">Bimbingan dan Konseling</string>
    <string name="_1_45">1:45</string>
    <string name="hubungan_internasional">Hubungan Internasional</string>
    <string name="ilmu_administrasi_negara">Ilmu Administrasi Negara</string>
    <string name="_1_23">1:23</string>
    <string name="sastra_inggris">Sastra Inggris</string>
    <string name="pendidikan_bahasa_inggris">Pendidikan Bahasa Inggris</string>
    <string name="daftar_mahasiswa_aktif_title">DAFTAR MAHASISWA AKTIF</string>
    <string name="daftar_mahasiswa_aktif_header">DATA REKAPITULASI MAHASISWA AKTIF</string>
    <string name="mahasiswa_kurang_mampu_title">DAFTAR MAHASISWA KURANG MAMPU</string>
    <string name="mahasiswa_kurang_mampu_header">DATA REAKAPITULASI MAHASISWA KURANG MAMPU</string>
    <string-array name="fakultas">
        <item>All</item>
        <item>SV</item>
        <item>FH</item>
        <item>FT</item>
        <item>Fapsi</item>
        <item>FP</item>
        <item>Fapet</item>
        <item>FK</item>
        <item>FIB</item>
        <item>FKOR</item>
        <item>FEB</item>
        <item>FISIP</item>
        <item>FSRD</item>
        <item>FKIP</item>
        <item>Fatisda</item>
        <item>FMIPA</item>
        <item>Pascasarjana</item>
    </string-array>
    <string name="mhs_aktif_title">Sekolah Vokasi</string>
    <string name="image">image</string>
    <string name="universitas_sebelas_maret">Universitas Sebelas Maret</string>
    <string name="lokasi">Lokasi: Jl. Ir. Sutami No. 36A, Surakarta, Jawa Tengah, Indonesia</string>
    <string name="nama_kampus">Universitas Sebelas Maret</string>
    <string name="lokasi_kampus">Jl. Ir. Sutami No. 36A, Surakarta, Jawa Tengah, Indonesia</string>
    <string name="sejarah">Sejarah</string>
    <string name="sejarah_kampus">Universitas Sebelas Maret didirikan pada tanggal 11 Maret 1976, sesuai dengan Keputusan Presiden Republik Indonesia Nomor 10 Tahun 1976. Nama \'Sebelas Maret\' dipilih untuk mengenang hari berdirinya universitas ini.</string>
    <string name="fakultas_dan_program_studi">Fakultas dan Program Studi</string>
    <string name="fakultas_kampus">UNS menawarkan berbagai fakultas dan program studi, baik di jenjang sarjana (S1), magister (S2), maupun doktor (S3). Beberapa fakultas yang ada di UNS antara lain:\n- Fakultas Kedokteran\n- Fakultas Ekonomi dan Bisnis\n- Fakultas Hukum\n- Fakultas Ilmu Sosial dan Ilmu Politik\n- Fakultas Teknik\n- Fakultas Keguruan dan Ilmu Pendidikan\n- Fakultas Sastra dan Seni Rupa\n- Fakultas MIPA\n- Fakultas Pertanian\n- Fakultas Teknologi Informasi dan Sains Data</string>
    <string name="visi">Visi</string>
    <string name="visi_kampus">Menjadi pusat pengembangan ilmu pengetahuan, teknologi, dan seni yang unggul berlandaskan nilai-nilai luhur budaya nasional.</string>
    <string name="misi">Misi</string>
    <string name="misi_kampus">1. Menyelenggarakan pendidikan yang berkualitas untuk menghasilkan lulusan yang kompeten dan berdaya saing tinggi.\n2. Melakukan penelitian yang inovatif dan aplikatif untuk pengembangan ilmu pengetahuan, teknologi, dan seni.\n3. Mengabdikan ilmu pengetahuan, teknologi, dan seni untuk kesejahteraan masyarakat.\n4. Mewujudkan tata kelola universitas yang baik (good university governance).</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="fasilitas_kampus">UNS menyediakan berbagai fasilitas untuk mendukung kegiatan akademik dan non-akademik, di antaranya:\n- Perpustakaan\n- Laboratorium\n- Pusat Kegiatan Mahasiswa\n- Asrama Mahasiswa\n- Rumah Sakit Pendidikan\n- Pusat Olahraga\n- Pusat Bahasa</string>
    <string name="kegiatan_dan_organisasi_mahasiswa">Kegiatan dan Organisasi Mahasiswa</string>
    <string name="kegiatan_kampus">UNS memiliki banyak organisasi mahasiswa yang aktif dalam berbagai bidang seperti:\n- BEM (Badan Eksekutif Mahasiswa)\n- UKM (Unit Kegiatan Mahasiswa) seperti UKM Seni, UKM Olahraga, dan UKM Riset\n- HMJ (Himpunan Mahasiswa Jurusan)</string>
    <string name="kerjasama_dan_jaringan">Kerjasama dan Jaringan</string>
    <string name="kerjasama_kampus">UNS menjalin kerjasama dengan berbagai institusi, baik dalam negeri maupun luar negeri, dalam rangka pengembangan akademik, penelitian, dan pengabdian kepada masyarakat.</string>
    <string name="kontak">Kontak</string>
    <string name="call_center">Telepon: (0271) 646994\nEmail: info@uns.ac.id\nWebsite: www.uns.ac.id</string>
    <string name="tahun">TAHUN</string>
    <string-array name="semester">
        <item>All</item>
        <item>SV</item>
        <item>FH</item>
        <item>FT</item>
        <item>Fapsi</item>
        <item>FP</item>
        <item>Fapet</item>
        <item>FK</item>
        <item>FIB</item>
        <item>FKOR</item>
        <item>FEB</item>
        <item>FISIP</item>
        <item>FSRD</item>
        <item>FKIP</item>
        <item>Fatisda</item>
        <item>FMIPA</item>
        <item>Pascasarjana</item>
    </string-array>
    <string name="nominal_bayar">NOMINAL BAYAR</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="informasi_akademik">INFORMASI AKADEMIK</string>
    <string name="jumlah_pembayaran_per_fakultas">JUMLAH PEMBAYARAN PER FAKULTAS</string>
    <string name="analisis_keketatan_mahasiswa">ANALISIS KEKETATAN MAHASISWA</string>
    <string name="data_rekapitulasi_keketatan_mahasiswa">DATA REKAPITULASI KEKETATAN MAHASISWA</string>
    <string-array name="data_title">
        <item>APLIKASI INFORMASI AKADEMIK</item>
        <item>INTEGRASI DENGAN SISTEM SIAKAD</item>
        <item>INFORMASI DAN FITUR YANG UP TO DATE</item>
    </string-array>
    <string-array name="data_desc">
        <item>Aplikasi Informasi Akademik adalah aplikasi Android yang berisi informasi terkait akademik kampus, seperti data terkait kemahasiswaan, data pembayaran, dan lain-lain.</item>
        <item>Tidak perlu lagi khawatir data akan berbeda antar sistem di UNS. Cari informasi data untuk keperluan laporan dan akreditasi pun akan lebih mudah dan cepat menggunakan EIS.</item>
        <item>Sistem akan selalu kami kembangkan untuk memudahkan Anda dalam pencarian informasi. Kirim saran dan masukkan Anda untuk pengembangan sistem di UNS yang lebih baik.</item>
    </string-array>
    <string-array name="data_btn_title">
        <item>KEKETATAN</item>
        <item>NILAI AKADEMIK</item>
        <item>MAHASISWA AKTIF</item>
        <item>MAHASISWA KURANG MAMPU</item>
        <item>ANALISIS PEMBAYARAN</item>
        <item>AEE</item>
    </string-array>
    <string-array name="data_btn_mhs_aktif">
        <item>ALL</item>
        <item>SEKOLAH VOKASI</item>
        <item>HUKUM</item>
        <item>TEKNIK</item>
        <item>PSIKOLOGI</item>
        <item>PERTANIAN</item>
        <item>PETERNAKAN</item>
        <item>KEDOKTERAN</item>
        <item>ILMU BUDAYA</item>
        <item>KEOLAHRAGAAN</item>
        <item>EKONOMI BISNIS</item>
        <item>ILMU SOSIAL POLITIK</item>
        <item>SENI RUPA dan DESAIN</item>
        <item>KEGURUAN</item>
        <item>TEKNOLOGI INFORMASI</item>
        <item>MIPA</item>
        <item>PASCASARJANA</item>
    </string-array>
    <string-array name="fakultas_list">
        <item>SV</item>
        <item>FH</item>
        <item>FT</item>
        <item>Fapsi</item>
        <item>FP</item>
        <item>Fapet</item>
        <item>FK</item>
        <item>FIB</item>
        <item>FKOR</item>
        <item>FEB</item>
        <item>FISIP</item>
        <item>FSRD</item>
        <item>FKIP</item>
        <item>Fatisda</item>
        <item>FMIPA</item>
        <item>Pascasarjana</item>
    </string-array>
</resources>