<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <Button
            android:id="@+id/btn_keketatan"
            style="@style/CustomButton"
            android:text="@string/btn_keketatan" />

        <Button
            android:id="@+id/btn_nilai_akademik"
            style="@style/CustomButton"
            android:text="@string/btn_nilai_akademik" />

        <Button
            android:id="@+id/btn_mahasiswa_aktif"
            style="@style/CustomButton"
            android:text="@string/btn_mahasiswa_aktif" />

        <Button
            android:id="@+id/btn_mahasiswa_kurang_mampu"
            style="@style/CustomButton"
            android:text="@string/btn_mahasiswa_kurang_mampu" />

        <Button
            android:id="@+id/btn_analisis_pembayaran"
            style="@style/CustomButton"
            android:text="@string/btn_analisis_pembayaran" />

        <Button
            android:id="@+id/btn_ace"
            style="@style/CustomButton"
            android:text="@string/btn_ace" />

    </LinearLayout>
</ScrollView>
